basic_grammar/declarations/declarations.output
Terminals which are not used

   REC
   WHERE


State 11 conflicts: 1 shift/reduce
State 22 conflicts: 1 shift/reduce, 2 reduce/reduce


Grammar

    0 $accept: g_arbre_exp $end

    1 g_arbre_exp: var_local_in
    2            | inter

    3 var_local_in: declaration_var_local IN g_arbre_exp
    4             | declaration_var_local IN expression

    5 declaration_var_local: LET affectation

    6 affectation: IDEN '=' affectation
    7            | expression
    8            | g_arbre_exp

    9 expression: arbre
   10           | ARITH_EXPR

   11 inter: suite_arbres
   12      | suite_foret

   13 suite_foret: suite_foret foret_simple
   14            | foret_simple

   15 foret_simple: OPEN suite_arbres CLOSE
   16             | OPEN arbre CLOSE
   17             | arbre

   18 suite_arbres: suite_arbres arbre
   19             | arbre arbre

   20 arbre: balise chaine CLOSE

   21 chaine: chaine intermediaire
   22       | /* empty */

   23 intermediaire: EMPTY_NODE
   24              | texte
   25              | arbre
   26              | IDEN

   27 texte: TEXT

   28 balise: TAG
   29       | TAG suite_cle_valeur

   30 suite_cle_valeur: suite_cle_valeur KEY VALUE
   31                 | KEY VALUE


Terminals, with rules where they appear

$end (0) 0
'=' (61) 6
error (256)
KEY (258) 30 31
VALUE (259) 30 31
TAG (260) 28 29
OPEN (261) 15 16
CLOSE (262) 15 16 20
TEXT (263) 27
EMPTY_NODE (264) 23
ARITH_EXPR (265) 10
LET (266) 5
IDEN (267) 6 26
REC (268)
IN (269) 3 4
WHERE (270)


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
g_arbre_exp (18)
    on left: 1 2, on right: 0 3 8
var_local_in (19)
    on left: 3 4, on right: 1
declaration_var_local (20)
    on left: 5, on right: 3 4
affectation (21)
    on left: 6 7 8, on right: 5 6
expression (22)
    on left: 9 10, on right: 4 7
inter (23)
    on left: 11 12, on right: 2
suite_foret (24)
    on left: 13 14, on right: 12 13
foret_simple (25)
    on left: 15 16 17, on right: 13 14
suite_arbres (26)
    on left: 18 19, on right: 11 15 18
arbre (27)
    on left: 20, on right: 9 16 17 18 19 25
chaine (28)
    on left: 21 22, on right: 20 21
intermediaire (29)
    on left: 23 24 25 26, on right: 21
texte (30)
    on left: 27, on right: 24
balise (31)
    on left: 28 29, on right: 20
suite_cle_valeur (32)
    on left: 30 31, on right: 29 30


state 0

    0 $accept: . g_arbre_exp $end

    TAG   shift, and go to state 1
    OPEN  shift, and go to state 2
    LET   shift, and go to state 3

    g_arbre_exp            go to state 4
    var_local_in           go to state 5
    declaration_var_local  go to state 6
    inter                  go to state 7
    suite_foret            go to state 8
    foret_simple           go to state 9
    suite_arbres           go to state 10
    arbre                  go to state 11
    balise                 go to state 12


state 1

   28 balise: TAG .
   29       | TAG . suite_cle_valeur

    KEY  shift, and go to state 13

    $default  reduce using rule 28 (balise)

    suite_cle_valeur  go to state 14


state 2

   15 foret_simple: OPEN . suite_arbres CLOSE
   16             | OPEN . arbre CLOSE

    TAG  shift, and go to state 1

    suite_arbres  go to state 15
    arbre         go to state 16
    balise        go to state 12


state 3

    5 declaration_var_local: LET . affectation

    TAG         shift, and go to state 1
    OPEN        shift, and go to state 2
    ARITH_EXPR  shift, and go to state 17
    LET         shift, and go to state 3
    IDEN        shift, and go to state 18

    g_arbre_exp            go to state 19
    var_local_in           go to state 5
    declaration_var_local  go to state 6
    affectation            go to state 20
    expression             go to state 21
    inter                  go to state 7
    suite_foret            go to state 8
    foret_simple           go to state 9
    suite_arbres           go to state 10
    arbre                  go to state 22
    balise                 go to state 12


state 4

    0 $accept: g_arbre_exp . $end

    $end  shift, and go to state 23


state 5

    1 g_arbre_exp: var_local_in .

    $default  reduce using rule 1 (g_arbre_exp)


state 6

    3 var_local_in: declaration_var_local . IN g_arbre_exp
    4             | declaration_var_local . IN expression

    IN  shift, and go to state 24


state 7

    2 g_arbre_exp: inter .

    $default  reduce using rule 2 (g_arbre_exp)


state 8

   12 inter: suite_foret .
   13 suite_foret: suite_foret . foret_simple

    TAG   shift, and go to state 1
    OPEN  shift, and go to state 2

    $default  reduce using rule 12 (inter)

    foret_simple  go to state 25
    arbre         go to state 26
    balise        go to state 12


state 9

   14 suite_foret: foret_simple .

    $default  reduce using rule 14 (suite_foret)


state 10

   11 inter: suite_arbres .
   18 suite_arbres: suite_arbres . arbre

    TAG  shift, and go to state 1

    $default  reduce using rule 11 (inter)

    arbre   go to state 27
    balise  go to state 12


state 11

   17 foret_simple: arbre .
   19 suite_arbres: arbre . arbre

    TAG  shift, and go to state 1

    TAG       [reduce using rule 17 (foret_simple)]
    $default  reduce using rule 17 (foret_simple)

    arbre   go to state 28
    balise  go to state 12


state 12

   20 arbre: balise . chaine CLOSE

    $default  reduce using rule 22 (chaine)

    chaine  go to state 29


state 13

   31 suite_cle_valeur: KEY . VALUE

    VALUE  shift, and go to state 30


state 14

   29 balise: TAG suite_cle_valeur .
   30 suite_cle_valeur: suite_cle_valeur . KEY VALUE

    KEY  shift, and go to state 31

    $default  reduce using rule 29 (balise)


state 15

   15 foret_simple: OPEN suite_arbres . CLOSE
   18 suite_arbres: suite_arbres . arbre

    TAG    shift, and go to state 1
    CLOSE  shift, and go to state 32

    arbre   go to state 27
    balise  go to state 12


state 16

   16 foret_simple: OPEN arbre . CLOSE
   19 suite_arbres: arbre . arbre

    TAG    shift, and go to state 1
    CLOSE  shift, and go to state 33

    arbre   go to state 28
    balise  go to state 12


state 17

   10 expression: ARITH_EXPR .

    $default  reduce using rule 10 (expression)


state 18

    6 affectation: IDEN . '=' affectation

    '='  shift, and go to state 34


state 19

    8 affectation: g_arbre_exp .

    $default  reduce using rule 8 (affectation)


state 20

    5 declaration_var_local: LET affectation .

    $default  reduce using rule 5 (declaration_var_local)


state 21

    7 affectation: expression .

    $default  reduce using rule 7 (affectation)


state 22

    9 expression: arbre .
   17 foret_simple: arbre .
   19 suite_arbres: arbre . arbre

    TAG  shift, and go to state 1

    $end      reduce using rule 9 (expression)
    $end      [reduce using rule 17 (foret_simple)]
    TAG       [reduce using rule 17 (foret_simple)]
    OPEN      reduce using rule 17 (foret_simple)
    IN        reduce using rule 9 (expression)
    IN        [reduce using rule 17 (foret_simple)]
    $default  reduce using rule 9 (expression)

    arbre   go to state 28
    balise  go to state 12


state 23

    0 $accept: g_arbre_exp $end .

    $default  accept


state 24

    3 var_local_in: declaration_var_local IN . g_arbre_exp
    4             | declaration_var_local IN . expression

    TAG         shift, and go to state 1
    OPEN        shift, and go to state 2
    ARITH_EXPR  shift, and go to state 17
    LET         shift, and go to state 3

    g_arbre_exp            go to state 35
    var_local_in           go to state 5
    declaration_var_local  go to state 6
    expression             go to state 36
    inter                  go to state 7
    suite_foret            go to state 8
    foret_simple           go to state 9
    suite_arbres           go to state 10
    arbre                  go to state 22
    balise                 go to state 12


state 25

   13 suite_foret: suite_foret foret_simple .

    $default  reduce using rule 13 (suite_foret)


state 26

   17 foret_simple: arbre .

    $default  reduce using rule 17 (foret_simple)


state 27

   18 suite_arbres: suite_arbres arbre .

    $default  reduce using rule 18 (suite_arbres)


state 28

   19 suite_arbres: arbre arbre .

    $default  reduce using rule 19 (suite_arbres)


state 29

   20 arbre: balise chaine . CLOSE
   21 chaine: chaine . intermediaire

    TAG         shift, and go to state 1
    CLOSE       shift, and go to state 37
    TEXT        shift, and go to state 38
    EMPTY_NODE  shift, and go to state 39
    IDEN        shift, and go to state 40

    arbre          go to state 41
    intermediaire  go to state 42
    texte          go to state 43
    balise         go to state 12


state 30

   31 suite_cle_valeur: KEY VALUE .

    $default  reduce using rule 31 (suite_cle_valeur)


state 31

   30 suite_cle_valeur: suite_cle_valeur KEY . VALUE

    VALUE  shift, and go to state 44


state 32

   15 foret_simple: OPEN suite_arbres CLOSE .

    $default  reduce using rule 15 (foret_simple)


state 33

   16 foret_simple: OPEN arbre CLOSE .

    $default  reduce using rule 16 (foret_simple)


state 34

    6 affectation: IDEN '=' . affectation

    TAG         shift, and go to state 1
    OPEN        shift, and go to state 2
    ARITH_EXPR  shift, and go to state 17
    LET         shift, and go to state 3
    IDEN        shift, and go to state 18

    g_arbre_exp            go to state 19
    var_local_in           go to state 5
    declaration_var_local  go to state 6
    affectation            go to state 45
    expression             go to state 21
    inter                  go to state 7
    suite_foret            go to state 8
    foret_simple           go to state 9
    suite_arbres           go to state 10
    arbre                  go to state 22
    balise                 go to state 12


state 35

    3 var_local_in: declaration_var_local IN g_arbre_exp .

    $default  reduce using rule 3 (var_local_in)


state 36

    4 var_local_in: declaration_var_local IN expression .

    $default  reduce using rule 4 (var_local_in)


state 37

   20 arbre: balise chaine CLOSE .

    $default  reduce using rule 20 (arbre)


state 38

   27 texte: TEXT .

    $default  reduce using rule 27 (texte)


state 39

   23 intermediaire: EMPTY_NODE .

    $default  reduce using rule 23 (intermediaire)


state 40

   26 intermediaire: IDEN .

    $default  reduce using rule 26 (intermediaire)


state 41

   25 intermediaire: arbre .

    $default  reduce using rule 25 (intermediaire)


state 42

   21 chaine: chaine intermediaire .

    $default  reduce using rule 21 (chaine)


state 43

   24 intermediaire: texte .

    $default  reduce using rule 24 (intermediaire)


state 44

   30 suite_cle_valeur: suite_cle_valeur KEY VALUE .

    $default  reduce using rule 30 (suite_cle_valeur)


state 45

    6 affectation: IDEN '=' affectation .

    $default  reduce using rule 6 (affectation)
